fixed the box positioning
Added a fake wrapper as a new anchor for the box absolute positioning

--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
   </style>
 </head>
 <body>
-  <main>
+  <div class="wrapper">
     <img src="images/illustration-box-desktop.svg" alt="boxImage" class="imgBox">
+  <main>
     <picture>
-      <source media="(max-width: 400px)" srcset="images/illustration-woman-online-mobile.svg" class="imgWoman">
+      <source media="(max-width: 1000px)" srcset="images/illustration-woman-online-mobile.svg" class="imgWoman">
       <img src="images/illustration-woman-online-desktop.svg" alt="illustration" class="imgWoman">
     </picture>
     <section>
@@ -56,6 +57,7 @@
       <div class="divider"></div>
     </section>
   </main>
+  </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Samuele Frasconi</a>.
